<resources>
    <string name="app_name">CktTestAssistant</string>
    <string name="deletetestitem">Del</string>
    <string name="savetestitem">save</string>
    <string name="add_testitem">Add</string>
    <string name="add_usecase">Add</string>
    <string name="starttest">Start</string>
    <string name="settingsdelay">delay : </string>
    <string name="settingstimes">times : </string>
    <string name="importusecaseconfig">Import</string>
    <string name="exportusecaseconfig">Export</string>
    <string name="createresultfail">create excel fail!</string>
    <string name="title_activity_open_file">open file</string>
    <string name="pleaseinputpath">Please input config file path</string>
    <string name="usecasehead">use case:</string>
    <string name="empty">empty</string>
    <string name="useCaseStartTag">"Use case : "</string>
    <string name="testItemStartTag">"Test item : "</string>
    <string name="insert_starttag">(</string>
    <string name="insert_endtag">)</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="set_tag_times">set use case times</string>
    <string name="item_invalide">item invalide</string>
    <string name="uc_must_has_chilren">must has child item</string>
    <string name="tag_insert_error">tag insert invalide</string>
    <string name="default_uc_name">uc</string>
    <string name="set_uc_name">set usecase name:</string>
    <string name="item_is_null">test item is null,please add!</string>
    <string name="set_propeties">set propeties</string>
    <string name="settingsbrightness">brightness : </string>
</resources>
