<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/panel"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="@dimen/horizontal_gap"
        android:layout_marginRight="@dimen/horizontal_gap"
        android:layout_marginTop="@dimen/vertical_gap"
        android:scrollbars="vertical"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/delete"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/usecasetext"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </ScrollView>


    <Button
        android:id="@+id/delete"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_selector"
        android:text="@string/deletetestitem"
        android:textAllCaps="false"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="7dp"
        tools:layout_editor_absoluteX="337dp" />


    <Button
        android:id="@+id/starttest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@drawable/btn_selector"
        android:text="@string/starttest"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/importusecaseconfig"
        app:layout_constraintRight_toLeftOf="@+id/exportusecaseconfig" />

    <Button
        android:id="@+id/importusecaseconfig"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:background="@drawable/btn_selector"
        android:text="@string/importusecaseconfig"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/exportusecaseconfig"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:background="@drawable/btn_selector"
        android:text="@string/exportusecaseconfig"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/emptyview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/empty"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/importusecaseconfig"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/panel" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/usecaselist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="4"
        app:layout_constraintBottom_toTopOf="@+id/importusecaseconfig"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/panel"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>